kubernetesTemplate/monitoring/speedtest-tracker/02-speedtest-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: monitoring
  labels:
    app: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest-tracker-pvc
