kubernetesTemplate/monitoring/speedtest-tracker/04-speedtest-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: monitoring
spec:
  ingressClassName: nginx # ← replace the annotation with this
  rules:
    - host: speedtest.vladsdomain.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
